# Lidar

./: .gitignore
ICP_realtime/: GetData.py  ICP.py  VisualPoint.py  main.py
ICP_test/: VTKPointCloud.py  a.out  encoder_odometry.py  icp  icp.py  icp_multiple.py  icp_ransac.py  icp_with_encoder.py  iterative_closest_point.py  pcd_view_test.py  pcl_ndt.py  pile_cloud.py
ICP_test/ce30data_1/: encoder.npy
ICP_test/ce30data_2/: encoder.npy
ICP_test/ce30data_3/: encoder.npy
ICP_test/data1/: encoder.npy
ICP_test/data153919/: encoder.npy
ICP_test/data2/: encoder.npy
ICP_test/data3/: encoder.npy
ICP_test/icp_pcl/: CMakeLists.txt  a.out  icp_registration.cpp  icp_test.cpp  narf_keypoint_extraction.cpp  narf_keypoint_extraction.h  pcltopcl2.cpp  warp_rigid.cpp
Veldyne_SLAM/: GetData.py  VisualPoint.py  main.py
